service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: LoadBalancer
  ports:
  # Port forwarding
  # That is, hitting the service at port "port" will forward the request to port "targetPort" on one of the selected pods (load balances)
  # If that pod has a single container, the request is forwarded to that container, at port "targetPort"
  # and hits whatever process is running on port "targetPort" in that container
  - name: port1
    port: 80
    targetPort: 8000
  - name: port2
    port: 81
    targetPort: 5000
  - name: proxy-port
    port: 82
    targetPort: 3000
  selector:
    app: node-app
