ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /node-app(/|$)(.*)
        backend:
          serviceName: node-app-service
          servicePort: 81
      - path: /node-app-faulty(/|$)(.*)
        backend:
          serviceName: node-app-service
          servicePort: 80
